enhance(migration): add date filters to list APIs
